--- a/fontend/package.json
+++ b/fontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/resource-timeline": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@mdi/font": "7.4.47",
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.7.7",
     "chart.js": "^3.9.1",
     "core-js": "^3.37.1",
